Converto to java

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,5 @@ spring:
     url:  jdbc:postgresql://localhost:5432/employee?currentSchema=public
     username: postgres
     password: 123456
+  web:
+    locale: pt_BR
